--- a/epg-view/build.gradle
+++ b/epg-view/build.gradle
@@ -1,41 +1,16 @@
 apply plugin: 'com.android.library'
 
-// change all of these as necessary
-//to generate new version
-//   1. Increase libraryVersion, versionCode, and versionName
-//   2. In Terminal execute this command ./gradlew install
-//   3. In Terminal execute this command ./gradlew bintrayUpload
 ext {
-    bintrayRepo = 'android-libs'  // this is the same as whatever you called your repository in Bintray
-    bintrayName = 'epg-view' // your bintray package name. I am calling it the same as my library name.
-
-    publishedGroupId = 'com.sgerges'
-    libraryName = 'epg-view'
-    artifact = 'epg-view' // I'm calling it the same as my library name
-
-    libraryDescription = 'Android View Library to display Electronic Program Guide (EPG) on an efficient way for Android Mobiles and Tablets'
-
-    siteUrl = 'https://github.com/simonkarmy/Android-EPGView'
-    gitUrl = 'https://github.com/simonkarmy/Android-EPGView.git'
 
     libraryVersion = '1.0.21'
-
-    developerId = 'simonkarmy' // Maven plugin uses this. I don't know if it needs to be anything special.
-    developerName = 'Simon Karmy'
-    developerEmail = 'simonkarmy2004@gmail.com'
-
-    licenseName = 'The MIT License (MIT)'
-    licenseUrl = 'https://opensource.org/licenses/MIT'
-    allLicenses = ["MIT"]
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 21
         versionName "${libraryVersion}"
 
@@ -47,6 +22,12 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        alpha {
+            matchingFallbacks = ['debug']
+        }
+        beta {
+            matchingFallbacks = ['release']
+        }
     }
 }
 
@@ -54,59 +35,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
 }
-
-apply plugin: 'com.github.dcendents.android-maven'
-
-group = publishedGroupId // Maven Group ID for the artifact
-
-install {
-    repositories.mavenInstaller {
-        // This generates POM.xml with proper parameters
-        pom {
-            project {
-                packaging 'aar'
-                groupId publishedGroupId
-                artifactId artifact
-
-                // Add your description here
-                name libraryName
-                description libraryDescription
-                url siteUrl
-
-                // Set your license
-                licenses {
-                    license {
-                        name licenseName
-                        url licenseUrl
-                    }
-                }
-                developers {
-                    developer {
-                        id developerId
-                        name developerName
-                        email developerEmail
-                    }
-                }
-                scm {
-                    connection gitUrl
-                    developerConnection gitUrl
-                    url siteUrl
-
-                }
-            }
-        }
-    }
-}
-
-// Bintray section
-// As long as you add bintray.user and bintray.apikey to the local.properties
-// file, you shouldn't have to change anything here. The reason you
-// don't just write them here is so that they won't be publicly visible
-// in GitHub or wherever your source control is.
-
-apply plugin: 'com.jfrog.bintray'
-
-version = libraryVersion
 
 if (project.hasProperty("android")) { // Android libraries
     task sourcesJar(type: Jar) {
@@ -128,37 +56,4 @@ if (project.hasProperty("android")) { // Android libraries
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
-}
-
-artifacts {
-    archives javadocJar
-    archives sourcesJar
-}
-
-Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-
-bintray {
-    user = properties.getProperty("bintray.user")
-    key = properties.getProperty("bintray.apikey")
-
-    configurations = ['archives']
-    pkg {
-        repo = bintrayRepo
-        name = bintrayName
-        desc = libraryDescription
-        websiteUrl = siteUrl
-        vcsUrl = gitUrl
-        licenses = allLicenses
-        publish = true
-        publicDownloadNumbers = true
-        version {
-            desc = libraryDescription
-            gpg {
-                // optional GPG encryption. Default is false.
-                sign = false
-                //passphrase = properties.getProperty("bintray.gpg.password")
-            }
-        }
-    }
 }
